--- a/client/src/components/post/post.css
+++ b/client/src/components/post/post.css
@@ -2,12 +2,12 @@
     width: 385px;
     margin: 0 25px 40px 25px;
 }
-.postImg{
-    width: 100%;
-    height: 280px;
-    object-fit: cover;
-    border-radius: 7px;
-}
+.postImg {
+    width: 100% !important;
+    height: 280px !important;
+    object-fit: cover !important;
+    border-radius: 7px !important;
+  }
 .postInfo{
     display: flex;
     flex-direction: column;
